--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
             <artifactId>spring-webmvc</artifactId>
             <version>4.3.30.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>4.2.20.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>4.2.20.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
